--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "googleapis": "^88.2.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.6.5",
+    "passport": "^0.5.0",
+    "passport-google-oauth2": "^0.2.0",
+    "xoauth2": "^1.2.0"
   }
 }
