--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.2.0",
+    "@craco/craco": "^5.9.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,8 +12,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-router-hash-link": "^2.4.3",
+    "react-scripts": "^4.0.3",
+    "web-vitals": "^1.1.2",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "craco start",
@@ -42,7 +44,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "favicons-webpack-plugin": "^5.0.2",
     "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
