--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,7 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
-    },
+  },
   "proxy": "http://localhost:3000",
   "eslintConfig": {
     "extends": [
@@ -43,10 +43,11 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
+    "@tailwindcss/postcss7-compat": "^2.2.16",
+    "autoprefixer": "^9.8.8",
     "favicons-webpack-plugin": "^5.0.2",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16",
     "webpack-pwa-manifest": "^4.3.0"
   }
 }
