--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "heroku-postbuild": "cd front && npm install && npm run build"
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -19,6 +19,7 @@
     "nodemailer": "^6.6.5",
     "passport": "^0.5.0",
     "passport-google-oauth2": "^0.2.0",
+    "sync-request": "^6.1.0",
     "xoauth2": "^1.2.0"
   }
 }
