--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,12 @@
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9.8.8"
+
   },
   "scripts": {
     "start": "craco start",
@@ -45,10 +50,6 @@
   },
   "devDependencies": {
     "@headlessui/react": "^1.4.1",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^9.8.8",
-    "gsap": "^3.8.0",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "gsap": "^3.8.0"
   }
 }
