--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.5.0",
     "passport-google-oauth2": "^0.2.0",
     "sync-request": "^6.1.0",
+    "tailwindcss": "^2.2.17",
     "xoauth2": "^1.2.0"
   }
 }
