--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.8",
+    "gsap": "^3.8.0",
     "postcss": "^7.0.39",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -52,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "@headlessui/react": "^1.4.1",
-    "gsap": "^3.8.0"
+    "@headlessui/react": "^1.4.1"
   }
 }
