--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@svgr/cli": "^5.5.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
@@ -51,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@headlessui/react": "^1.4.1"
   }
 }
